# dartpy

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  all_dart.h  chimera.yml  package.xml  parse.py  parse2.py  parse3.py  parse4.py  setup.cfg  setup.py
.ci/: install.sh  install_linux.sh  install_macos.sh  script.sh
.ci/docker/: env.list  ubuntu-artful  ubuntu-bionic  ubuntu-xenial
chimera/: CMakeLists.txt  chimera.cpp  chimera.yml  chimera_without_voxel.yml  parsers.cpp  placeholder.cpp
chimera/pybind11/: chimera.yml
chimera/pybind11/templates/: class.mstch.cpp  enum.mstch.cpp  function.mstch.cpp  module.mstch.cpp  variable.mstch.cpp
chimera/templates/: cxx_record.mstch.cpp  function.mstch.cpp  module.mstch.cpp
ci/: install_linux.sh  install_macos.sh
cmake/: CMakeLists_bindings.txt.in  config.h.in
dart/: __init__.py
dart/gui/vispy/: frame_node.py  refreshable_node.py  shape_frame_node.py  skeleton_node.py  viewer.py  world_node.py
dart/gui/vispy/shapes/: assimp_mesh_node.py  assimp_node_node.py  box_shape_node.py  capsule_shape_node.py  cylinder_shape_node.py  material.py  mesh_shape_node.py  shape_node.py  sphere_shape_node.py  texture.py
dart/gui/vispy/shapes/visuals/: capsule_visual.py  cylinder_visual.py  generation.py
examples/: gui.py
examples/osg_empty/: main.py
examples/rigid_cubes/: main.py  main_opengl.py  main_vispy.py  my_window.py
examples/rigid_cubes_offscreen/: main_vispy.py
examples/wam/: main_opengl.py  main_vispy.py
include/dartpy/: BodyNode.h  Skeleton.h  parsers.h  pointers.h  template_registry.h
include/dartpy/detail/: JointAndNodeRegistry.h  JointTemplateMultiplexer.h
metadata/: Shape.yaml
sandbox/vispy/: sandbox.py
scripts/: grasp_fuze_bottle.py  load_herb.py
src/: BodyNode.cpp  CMakeLists.txt  Skeleton.cpp  pointers.h  python.cpp  python_BallJoint.cpp  python_BodyNode.cpp  python_CollisionDetector.cpp  python_Constraint.cpp  python_ConstraintSolver.cpp  python_DartLoader.cpp  python_DegreeOfFreedom.cpp  python_Detachable.cpp  python_Entity.cpp  python_EulerJoint.cpp  python_Frame.cpp  python_FreeJoint.cpp  python_Joint.cpp  python_MetaSkeleton.cpp  python_MultiDofJoint.cpp  python_PlanarJoint.cpp  python_PrismaticJoint.cpp  python_RevoluteJoint.cpp  python_ScrewJoint.cpp  python_SimWindow.cpp  python_SingleDofJoint.cpp  python_Skeleton.cpp  python_Subject.cpp  python_TranslationalJoint.cpp  python_UniversalJoint.cpp  python_WeldJoint.cpp  python_World.cpp  python_ZeroDofJoint.cpp  skel_parser.cpp  template_registry.cpp  util.h
src_generated/: CMakeLists.txt  _ZN4dart10constraint12PGSLCPSolverE.cpp  _ZN4dart10constraint14ConstraintBaseE.cpp  _ZN4dart10constraint14ConstraintInfoE.cpp  _ZN4dart10constraint15JointConstraintE.cpp  _ZN4dart10constraint16ConstrainedGroupE.cpp  _ZN4dart10constraint16ConstraintSolverE.cpp  _ZN4dart10constraint16DantzigLCPSolverE.cpp  _ZN4dart10constraint17BalanceConstraint13ErrorMethod_tE.cpp  _ZN4dart10constraint17BalanceConstraint15BalanceMethod_tE.cpp  _ZN4dart10constraint17BalanceConstraintE.cpp  _ZN4dart10constraint17ContactConstraintE.cpp  _ZN4dart10constraint19BallJointConstraintE.cpp  _ZN4dart10constraint19WeldJointConstraintE.cpp  _ZN4dart10constraint20JointLimitConstraintE.cpp  _ZN4dart10constraint20ServoMotorConstraintE.cpp  _ZN4dart10constraint21SoftContactConstraintE.cpp  _ZN4dart10constraint30JointCoulombFrictionConstraintE.cpp  _ZN4dart10constraint8solvePGSEiiiPdS1_S1_S1_S1_PiPNS0_9PGSOptionE.cpp  _ZN4dart10constraint9LCPSolverE.cpp  _ZN4dart10constraint9PGSOptionE.cpp  _ZN4dart10simulation5WorldE.cpp  _ZN4dart10simulation9RecordingE.cpp  _ZN4dart11integration10IntegratorE.cpp  _ZN4dart11integration13RK4IntegratorE.cpp  _ZN4dart11integration15EulerIntegratorE.cpp  _ZN4dart11integration16IntegrableSystemE.cpp  _ZN4dart11integration27SemiImplicitEulerIntegratorE.cpp  _ZN4dart3gui11GraphWindowE.cpp  _ZN4dart3gui11drawArrow2DERKN5Eigen6MatrixIdLi2ELi1ELi0ELi2ELi1EEES5_d.cpp  _ZN4dart3gui11drawArrow3DERKN5Eigen6MatrixIdLi3ELi1ELi0ELi3ELi1EEES5_ddd.cpp  _ZN4dart3gui12jitter_pointE.cpp  _ZN4dart3gui13SoftSimWindowE.cpp  _ZN4dart3gui15drawProgressBarEii.cpp  _ZN4dart3gui18drawStringOnScreenEffRKSsb.cpp  _ZN4dart3gui5Win2DE.cpp  _ZN4dart3gui5Win3DE.cpp  _ZN4dart3gui6JitterE.cpp  _ZN4dart3gui9SimWindowE.cpp  _ZN4dart3gui9TrackballE.cpp  (+535 more)
templates/: cxx_record.mstch.cpp  enum.mstch.cpp  function.mstch.cpp  module.mstch.cpp  variable.mstch.cpp
test_resources/: r2d2.urdf
tests/: CMakeLists.txt  __init__.py  test_DartLoader.py  test_dart_loader.py  util.py
tests/assets/skel/: cubes.skel
tests/assets/urdf/: joint_properties.urdf  testWorld.urdf
tests/comprehensive/: test_collision_detector.py  test_skeleton.py
tests/regression/: test_get_shape.py  test_issue81_get_joints.py
tests/unit/: test_dart_loader.py
tests/unit/common/: test_uri.py
trusty/debian/: changelog  control  copyright  python-dartpy.install  python3-dartpy.install
