<?xml version="1.0"?> 
<package format="2">
  <!-- This is a Catkin package.xml file to optionally support building DARTPy
       in a Catkin workspace. Catkin is not required to build DARTPy. For more
       information, see: http://ros.org/reps/rep-0136.html -->
  <name>dartpy</name>
  <version>5.1.0</version>
  <description>
    Python bindings for DART, the Dynamic Animation and Robotics Toolkit.
  </description>
  <url type="website">https://github.com/personalrobotics/dartpy</url>
  <url type="repository">https://github.com/personalrobotics/dartpy.git</url>
  <url type="bugtracker">https://github.com/personalrobotics/dartpy/issues</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>cmake</buildtool_depend>
  <depend>boost</depend>
  <depend>dart</depend>
  <depend>python</depend>
  <!-- These are required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
